syntax = "proto3";

package content.service.v1;


import "google/protobuf/empty.proto";
import "pagination/v1/pagination.proto";

// 变量的命名一律使用小驼峰命名法，例如：firstName、lastName等。

// 链接服务
service LinkService {
  // 获取链接列表
  rpc ListLink (pagination.PagingRequest) returns (ListLinkResponse) {}

  // 获取链接数据
  rpc GetLink (GetLinkRequest) returns (Link) {}

  // 创建链接
  rpc CreateLink (CreateLinkRequest) returns (Link) {}

  // 更新链接
  rpc UpdateLink (UpdateLinkRequest) returns (Link) {}

  // 删除链接
  rpc DeleteLink (DeleteLinkRequest) returns (google.protobuf.Empty) {}
}

// 链接
message Link {
  uint32 id = 1;
  optional string name = 2;
  optional string url = 3;
  optional string logo = 4;
  optional string description = 5;
  optional string team = 6;
  optional int32 priority = 7;
  optional string createTime = 8;
  optional string updateTime = 9;
}

// 回应 - 链接列表
message ListLinkResponse {
  repeated Link items = 1;
  int32 total = 2;
}

// 请求 - 链接数据
message GetLinkRequest {
  uint32 id = 1;
}

// 请求 - 创建链接
message CreateLinkRequest {
  Link link = 1;
  optional uint32 operatorId = 2;
}

// 请求 - 更新链接
message UpdateLinkRequest {
  uint32 id = 1;
  Link link = 2;
  optional uint32 operatorId = 3;
}

// 请求 - 删除链接
message DeleteLinkRequest {
  uint32 id = 1;
  optional uint32 operatorId = 2;
}
